--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,11 @@
         <item>Car</item>
         <item>Freetime</item>
     </string-array>
-
+    <string-array name="incometypes">
+        <item>Creditcard</item>
+        <item>Cash</item>
+        <item>Gift</item>
+    </string-array>
     <string name="facebook_app_id">401084066987967</string>
     <string name="fb_login_protocol_scheme">fb401084066987967</string>
     <string name="outlayitemicon">OutlayItemIcon</string>
