--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="facebook_app_id">401084066987967</string>
     <string name="fb_login_protocol_scheme">fb401084066987967</string>
     <string name="outlayitemicon">OutlayItemIcon</string>
+    <string name="incomeitemicon">IncomeItemIcon</string>
     <string name="outlays">OUTLAYS</string>
     <string name="incomes">INCOMES</string>
 </resources>
